Split two DB
